--- a/configure.ac
+++ b/configure.ac
@@ -59,8 +59,8 @@ AC_SUBST([VDSMUSER], [vdsm])
 AC_SUBST([VDSMGROUP], [kvm])
 AC_SUBST([METADATAUSER], [vdsm])
 AC_SUBST([METADATAGROUP], [kvm])
-AC_SUBST([QEMUUSER], [qemu])
-AC_SUBST([QEMUGROUP], [qemu])
+AC_SUBST([QEMUUSER], [libvirt-qemu])
+AC_SUBST([QEMUGROUP], [kvm])
 AC_SUBST([SNLKUSER], [sanlock])
 AC_SUBST([SNLKGROUP], [sanlock])
 
