--- a/tests/run_tests.sh.in
+++ b/tests/run_tests.sh.in
@@ -3,5 +3,8 @@ if [ -z "$PYTHON_EXE" ]; then
     PYTHON_EXE="@PYTHON@"
 fi
 
+modprobe iscsi_target_mod
+mount -t configfs configfs /sys/kernel/config/
+
 prefix="@prefix@"
 LC_ALL=C PYTHONPATH="@datarootdir@/vdsm" "$PYTHON_EXE" @top_srcdir@/tests/testrunner.py $@
