vdsmd and supervdsmd: extract common init tasks and add init adapter
Move common init tasks from vdsmd.init.in to a separated file,
vdsmd_init_common.sh. This enables SysV init script, SystemD and other
init systems re-use vdsm pre-start/post-stop scripts.

Add vdsm/init/daemonAdapter for various init systems. daemonAdapter can
start vdsm optionally with respawn and console redirection. On powerful
init systems, we call daemonAdapter with no/few options, on SysV init
system, we call it with respawn, console redirection and pid creation
option. In this way we can remedy the gap of powerful init systems and
less powerful ones.

This patch uses daemonAdapter in vdsmd.init.in, vdsmd.service,
supervdsmd.init.in and supervdsmd.service.in.
vdsmd systemd service does not relies on SysV init scripts to run init
tasks any more, it calls vdsmd_init_common.sh to run init tasks.

Change-Id: Id8e514df1ca88500f746242134ddb24c31588046
Signed-off-by: Zhou Zheng Sheng <zhshzhou@linux.vnet.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ vdsm/vdsm-tmpfiles.d.conf
 vdsm/vdsm.rwtab
 vdsm/vdsmd.8
 vdsm/vdsmd.init
+vdsm/vdsmd.service
+vdsm/vdsmd_init_common.sh
 vdsm/supervdsmd.init
 vdsm/supervdsmd.service
 vdsm_api/vdsm-api.html
