--- a/vdsm.spec.in
+++ b/vdsm.spec.in
@@ -563,6 +563,8 @@ install -Dm 0644 vdsm/limits.conf \
 
 %if 0%{?with_systemd}
 # Install the systemd scripts
+# vdsm systemd unit does not rely on systemd-vdsmd any more, but we keep it to
+# retain backward compatibility with old ovirt-host-deploy.
 install -Dm 0755 vdsm/vdsmd.init %{buildroot}/lib/systemd/systemd-vdsmd
 install -Dm 0644 vdsm/vdsmd.service %{buildroot}%{_unitdir}/vdsmd.service
 install -Dm 0644 vdsm/supervdsmd.service %{buildroot}%{_unitdir}/supervdsmd.service
@@ -811,6 +813,7 @@ exit 0
 %{_datadir}/%{vdsm_name}/blkid.py*
 %{_datadir}/%{vdsm_name}/caps.py*
 %{_datadir}/%{vdsm_name}/clientIF.py*
+%{_datadir}/%{vdsm_name}/daemonAdapter
 %{_datadir}/%{vdsm_name}/dmidecodeUtil.py*
 %{_datadir}/%{vdsm_name}/API.py*
 %{_datadir}/%{vdsm_name}/hooking.py*
@@ -856,6 +859,7 @@ exit 0
 %{_libexecdir}/%{vdsm_name}/unpersist-vdsm-hook
 %{_libexecdir}/%{vdsm_name}/ovirt_functions.sh
 %{_libexecdir}/%{vdsm_name}/vdsm-gencerts.sh
+%{_libexecdir}/%{vdsm_name}/vdsmd_init_common.sh
 %{_datadir}/%{vdsm_name}/storage/__init__.py*
 %{_datadir}/%{vdsm_name}/storage/blockSD.py*
 %{_datadir}/%{vdsm_name}/storage/blockVolume.py*
