packaging: rename supervdsmServer.py to supervdsmServer and add environment file
supervdsm process is started by "python supervdsmServer.pyc". This is a
bit verbose when it is put in the SysV init script and SystemD service
unit. This patch renames supervdsmServer.py to supervdsmServer to enable
the init script start supervdsmServer directly.

In this patch, an environment file is also add for supervdsmd service.

Change-Id: Ifbcfcfb6f22040d038541c79ac4d0e66ac106504
Signed-off-by: Zhou Zheng Sheng <zhshzhou@linux.vnet.ibm.com>

--- a/vdsm/supervdsmd.init.in
+++ b/vdsm/supervdsmd.init.in
@@ -18,12 +18,13 @@
 # Short-Description: init script for the Super VDS management server
 ### END INIT INFO
 
-SUPERVDSM_BIN=@VDSMDIR@/supervdsmServer.pyc
+SUPERVDSM_BIN=@VDSMDIR@/supervdsmServer
 PIDFILE=@VDSMRUNDIR@/supervdsmd.pid
 RESPAWNPIDFILE=@VDSMRUNDIR@/supervdsm_respawn.pid
 SOCKFILE=@VDSMRUNDIR@/svdsm.sock
 prog=supervdsm
 
+[ -f /etc/sysconfig/supervdsmd ] && . /etc/sysconfig/supervdsmd
 . /etc/init.d/functions
 
 log_failure_msg() { echo -n "$@"; failure "$@"; echo; }
@@ -36,7 +37,7 @@ start(){
 
         "@VDSMDIR@/daemonAdapter" -0 /dev/null -1 /dev/null -2 /dev/null \
             "@VDSMDIR@/respawn" --minlifetime 10 --daemon \
-            --masterpid "${RESPAWNPIDFILE}" "@PYTHON@" "${SUPERVDSM_BIN}" \
+            --masterpid "${RESPAWNPIDFILE}" "${SUPERVDSM_BIN}" \
             --sockfile "${SOCKFILE}" --pidfile "${PIDFILE}"
         RETVAL=$?
         [ "$RETVAL" -eq 0 ] && log_success_msg "$prog start" || log_failure_msg "$prog start"
