Add vdsm upstart jobs
Add Upstart jobs for vdsmd, supervdsmd, vdsm-restore-net-config,
vdsm-tmpfiles.

vdsmd, supervdsmd, vdsm-restore-net-config jobs are Upstart counterpart
of vdsmd.service, supervdsmd.service and vdsm-restore-net-config.service
in systemd.

vdsm-tmpfiles is to create directories under /var/run/ for vdsm and
supervdsm. In Upstart there is no systemd-tmpfiles.sercice equivalent,
so we implement simple script in vdsm-tmpfiles to do the necessary job.

Change-Id: Id68ec0197bd1e09100f5da96ac4db24f2b90753a
Signed-off-by: Zhou Zheng Sheng <zhshzhou@linux.vnet.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -45,18 +45,22 @@ vdsm/sos/vdsm.py
 vdsm/storage/12-vdsm-lvm.rules
 vdsm/storage/protect/safelease
 vdsm/sudoers.vdsm
+vdsm/supervdsmd.upstart
 vdsm/svdsm.logger.conf
 vdsm/vdscli.py
 vdsm/vdsm-gencerts.sh
 vdsm/vdsm-logrotate.conf
 vdsm/vdsm-restore-net-config.init
+vdsm/vdsm-restore-net-config.upstart
 vdsm/vdsm-sosplugin.py
 vdsm/vdsm-store-net-config
 vdsm/vdsm-tmpfiles.d.conf
+vdsm/vdsm-tmpfiles.upstart
 vdsm/vdsm.rwtab
 vdsm/vdsmd.8
 vdsm/vdsmd.init
 vdsm/vdsmd.service
+vdsm/vdsmd.upstart
 vdsm/vdsmd_init_common.sh
 vdsm/supervdsmd.init
 vdsm/supervdsmd.service
