libvirt configure: use "ed" instead of "sed --copy -i"
"sed -i" generates a temp file for output, then renames the temp file to
the targeted file. Renaming a file means just changing the content of
the directory entry, and the edited file has different inode index from
the original version. So the sed edited file is a different file though
with the same file name as the original version. To use sed on
ovirt-node on bind-mounted files, we need "--copy" to copy the temp file
into targeted file instead of renaming. Unfortunately, "--copy" is
provided by a patch that is specific to the RPM packaged sed on Red Hat
family distros. The "--copy" option is neither in GNU sed [1] nor in
Single Unix Specification sed [2].

In this patch we use "ed" instead of "sed -i --copy". "ed" edits the
file in-place, by buffering the edited contents in memory and flushing
to the file at last.

[1] http://www.gnu.org/software/sed/manual/sed.html
[2] http://pubs.opengroup.org/onlinepubs/9699919799/utilities/sed.html

Change-Id: Ic265df1a5abca0104d044f8c3048cf0643547c70
Signed-off-by: Zhou Zheng Sheng <zhshzhou@linux.vnet.ibm.com>

--- a/lib/vdsm/tool/libvirt_configure.sh.in
+++ b/lib/vdsm/tool/libvirt_configure.sh.in
@@ -107,8 +107,24 @@ libvirtd_sysv2upstart() {
 # Remove configuration created by vdsm (old "# by vdsm" and the new format)
 # Argument: configuration file that will be inspected
 remove_vdsm_conf() {
-    sed -i --copy -e "/${start_conf_section}/,/${end_conf_section}/d" \
-        -e "/${by_vdsm}/d" "$@"
+    local confFile
+    for confFile in "$@" ; do
+        # ed considers empty address ranges as error and exits on error.
+        # If there is no old "# by vdsm", ed quits without saving the
+        # edited file. We put each expression in a seperate ed invocation to
+        # have all commands exectuded even if any one of them fails.
+        # TODO: If system or ed crashed when editing the file, the file would
+        # remain in a inconsistent state. Implement atomic file editing in
+        # future.
+        ed -s "${confFile}" >/dev/null 2>&1 <<EOF
+/${start_conf_section}/,/${end_conf_section}/d
+wq
+EOF
+        ed -s "${confFile}" >/dev/null 2>&1 <<EOF
+g/${by_vdsm}/d
+wq
+EOF
+    done
 }
 
 set_if_default() {
