--- a/vdsm.spec.in
+++ b/vdsm.spec.in
@@ -182,6 +182,7 @@ Requires: kernel >= 3.6
 Requires: sanlock >= 2.4-2, sanlock-python
 Requires: policycoreutils-python
 Requires: sed >= 4.2.1-10
+Requires: ed
 Requires: selinux-policy-targeted >= 3.10.0-149
 Requires: lvm2 >= 2.02.95
 %endif
